rules/ingress-and-egress-blocked/test/ccnp-namespace-selector-other-ns-failed/input/ccnp.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: my-ns-allowlist
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: my-ns
  ingress:
  - fromEndpoints:
    - matchLabels: {}
  egress:
  - toEndpoints:
    - matchLabels: {}
