rules/ingress-and-egress-blocked/test/ccnp-namespace-selector-other-ns-failed/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  namespace: other
  labels:
    app: other-app
spec:
  containers:
  - name: app
    image: nginx
